logica control de fichajes actualizada y logica de horarios hecha