@@ -14,7 +14,6 @@ import org.springframework.security.core.userdetails.UserDetails;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Getter
 @Setter
@@ -27,37 +26,38 @@ public class User implements UserDetails {
     @GeneratedValue(strategy = GenerationType.IDENTITY)
     private Long id;
 
-    @NotBlank(message = "El campo no puede ser nulo o estar vacio")
+    @NotBlank(message = "The field cannot be null or empty")
     @Column(nullable = false)
     private String name;
 
-    @NotBlank(message = "El campo no puede ser nulo o estar vacio")
+    @NotBlank(message = "The field cannot be null or empty")
     @Column(nullable = false)
     private String surnames;
 
     @Column(unique = true)
     private String dni;
 
-    @NotBlank(message = "El campo no puede ser nulo o estar vacio")
-    @Email(message = "El email no es valido (estructura valida: ejemplo@gmail.com)")
+    @NotBlank(message = "The field cannot be null or empty")
+    @Email(message = "The email is not valid (valid structure: example@gmail.com)")
     @Column(nullable = false, unique = true)
     private String email;
 
     private String phoneNumber;
 
-    @NotBlank(message = "El campo no puede ser nulo o estar vacio")
+    @NotBlank(message = "The field cannot be null or empty")
     @Column(nullable = false)
     private String password;
 
-    // Relacion 1,N con tabla assignments
+    // 1,N relationship with assignments table
     @OneToMany(mappedBy = "user", cascade = CascadeType.ALL, orphanRemoval = true,  fetch = FetchType.LAZY)
-    private List<Assignment> assignments = new ArrayList<>();
+    // Transient is used to avoid the serialization of UserDetails
+    private transient List<Assignment> assignments = new ArrayList<>();
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
         return assignments.stream()
                 .map(assignment -> new SimpleGrantedAuthority("ROLE_" + assignment.getRole().getRoleName().toUpperCase()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
