@@ -2,16 +2,16 @@ package app.fichajes.fichajes.services;
 
 import app.fichajes.fichajes.exceptions.FieldDataAlreadyExistsException;
 import app.fichajes.fichajes.exceptions.ResourceNotFoundException;
-import app.fichajes.fichajes.models.dtos.request.CreateRoleRequestDTO;
+import app.fichajes.fichajes.models.dtos.request.RoleRequestDTO;
 import app.fichajes.fichajes.models.dtos.response.RoleResponseDTO;
 import app.fichajes.fichajes.models.entities.Role;
 import app.fichajes.fichajes.repositories.RoleRepository;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class RoleService {
@@ -25,27 +25,32 @@ public class RoleService {
         this.modelMapper = modelMapper;
     }
 
-    public RoleResponseDTO createRole(CreateRoleRequestDTO createRoleRequestDTO) {
-        if (roleRepository.existsByRoleName(createRoleRequestDTO.getRoleName())) {
-            throw new FieldDataAlreadyExistsException("Este rol ya existe en la base de datos: " + createRoleRequestDTO.getRoleName());
+    @Transactional
+    public RoleResponseDTO createRole(RoleRequestDTO roleRequestDTO) {
+        if (roleRepository.existsByRoleName(roleRequestDTO.getRoleName())) {
+            throw new FieldDataAlreadyExistsException("This role already exists in the database: " + roleRequestDTO.getRoleName());
         }
 
-        Role role = modelMapper.map(createRoleRequestDTO, Role.class);
+        roleRequestDTO.setRoleName(roleRequestDTO.getRoleName().toUpperCase());
+
+        Role role = modelMapper.map(roleRequestDTO, Role.class);
         Role savedRole = roleRepository.save(role);
         return modelMapper.map(savedRole, RoleResponseDTO.class);
 
     }
 
+    @Transactional(readOnly = true)
     public List<RoleResponseDTO> getAllRoles() {
         return roleRepository.findAll().stream()
                 .map(role -> modelMapper.map(role, RoleResponseDTO.class))
-                .collect(Collectors.toList());
+                .toList();
 
     }
 
+    @Transactional
     public void deleteRole(Long id) {
         if (!roleRepository.existsById(id)) {
-            throw new ResourceNotFoundException("Rol no encontrado con id: " + id);
+            throw new ResourceNotFoundException("Role not found with id: " + id);
         }
         roleRepository.deleteById(id);
 
